# CellShot

./: .gitimore  CMakeLists.txt
.github/workflows/: build-windows.yml
scripts/: pull-artifact.ps1
src/: main.c
